--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -209,7 +209,7 @@ jobs:
         run: |
             echo "✅ Building docker image..."
             path=dist
-            image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:${{ github.sha }}
+            image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:develop-${{ github.sha }}
             echo "Change working directory to $path"
             cd "$path"
             docker build -t "$image_tag" .
@@ -231,7 +231,7 @@ jobs:
           AZURE_CONTAINER_REPOSITORY_NAME: ${{needs.setup-env-job.outputs.AZURE_CONTAINER_REPOSITORY_NAME}}             
         run: |
           echo "✅ Run image..."
-          image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:${{ github.sha }}
+          image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:develop-${{ github.sha }}
           docker run -d -p 8080:8080 -e PROMPTFLOW_SERVING_ENGINE=$PROMPTFLOW_SERVING_ENGINE -e PROMPTFLOW_WORKER_NUM=$PROMPTFLOW_WORKER_NUM $image_tag
 
       - name: Register Image
@@ -239,7 +239,7 @@ jobs:
           AZURE_CONTAINER_REGISTRY_NAME: ${{needs.setup-env-job.outputs.AZURE_CONTAINER_REGISTRY_NAME}}
           AZURE_CONTAINER_REPOSITORY_NAME: ${{needs.setup-env-job.outputs.AZURE_CONTAINER_REPOSITORY_NAME}}  
         run: |
-          image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:${{ github.sha }}
+          image_tag=$AZURE_CONTAINER_REPOSITORY_NAME:develop-${{ github.sha }}
           full_registry_name="$AZURE_CONTAINER_REGISTRY_NAME.azurecr.io"
           echo "✅ Trying to login to $full_registry_name..."
           az acr login -n "$full_registry_name"
@@ -250,17 +250,3 @@ jobs:
 
           echo "✅ Start pushing image...$acr_image_tag"
           docker push "$acr_image_tag"            
-
-  trigger-cd-pipeline:
-    runs-on: ubuntu-latest
-    needs: [setup-env-job, build-image]
-    environment: dev    
-    steps:
-      - name: Trigger CD pipeline
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/continuous_delivery_dev.yml/dispatches \
-            -d '{"ref":"develop"}'
